css/style.css
/* Universal Styles */

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    font-family: 'Kanit', sans-serif;
    background: url("../assets/unsplashinvert.jpg") no-repeat center center fixed !important;
    background-size: cover;
    margin: 0;
    padding: 0;
    height: auto;
}

main {
    display: flex;
    justify-content: center; 
    align-items: center; 
    height: 100vh; 
    margin: 0;
    min-height: 100vh;
    padding-bottom: 80px;
    flex-direction: column;
  }
  
  .accordion {
    width: 50%; 
  }

/* Nav Bar Styles */

.navbar {
    font-size: x-large;
    position: fixed;
    width: 100%;
}

nav a {
    color: white !important;
    font-weight: 400 !important;
}


/* Progress Bars */

.skills {
    text-align: center;
}

.progress-container {
    display: flex;
    flex-direction: column;
    max-width: 600px;
    margin: 0 auto;
    border: #333;
}

.skill {
    display: flex;
    align-items: center;
    margin-bottom: 15px;
}

.skill-label {
    width: 150px;
}

.progress-bar-background {
    width: 400px;
    height: 25px;
    background-color: #f3f3f3;
    border-radius: 5px;
    border: 1px solid #333;
    position: relative;
}

.progress-bar {
    height: 100%;
    background-color: #ffd700;
    border-radius: 5px;
}

.progress-value {
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
    font-size: 14px;
    color: #333;
}

/* insta section */


/* Footer Styles */

footer {
    text-align: center;
    position: fixed;
    background-color: black;
    width: 100%;
    bottom: 0;
    padding: 0em;
}

#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
    text-decoration: none !important;
    color: inherit;
    align-items: center;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: white;
}

#social-networks span {
    font-size: 14px;
    color: white;
    text-decoration: none;
}

li a {
    text-decoration: none;
}

